updated css and background

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -18,3 +18,40 @@ h2 {
   font-size: 5em;
   text-shadow: 0.03em 0.03em 0 turquoise;
 }
+body {
+  background-color: transparent;
+  background: url("../images/glassrain.jpeg") fixed no-repeat;
+  background-size: cover;
+  max-height: 300rem;
+
+  border-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(rgba(255, 255, 255, 0.75)),
+    color-stop(0%, rgba(245, 245, 245, 0.75)),
+    color-stop(16.6%, rgba(245, 245, 245, 0.75)),
+    color-stop(37.8%, rgb(245, 245, 245)),
+    color-stop(48.8%, rgb(245, 245, 245)),
+    color-stop(53.1%, rgb(254, 254, 254)),
+    color-stop(79.4%, rgba(245, 245, 245, 0.75)),
+    color-stop(84.3%, rgba(245, 245, 245, 0.75))
+  ) !important;
+  border-image: linear-gradient(
+    to bottom right,
+    rgba(255, 255, 255, 0.75) 0%,
+    rgba(245, 245, 245, 0.75) 0%,
+    rgba(245, 245, 245, 0.75) 16.6%,
+    rgb(245, 245, 245) 37.8%,
+    rgb(245, 245, 245) 48.8%,
+    rgb(254, 254, 254) 53.1%,
+    rgba(245, 245, 245, 0.75) 79.4%,
+    rgba(245, 245, 245, 0.75) 84.3%
+  ) !important;
+  border-image-slice: 1 !important;
+}
+.top,
+.container {
+  background: linear-gradient(to top, coral, lightblue);
+  opacity: 94%;
+}
